@@ -1182,7 +1182,9 @@ gld${EMULATION_NAME}_place_orphan (lang_input_statement_type *file, asection *s)
 #define HAVE_SECTION(hold, name) \
 (hold.os != NULL || (hold.os = lang_output_section_find (name)) != NULL)
 
-  if ((s->flags & SEC_EXCLUDE) != 0 && !link_info.relocatable)
+  if (((s->flags & (SEC_EXCLUDE | SEC_GROUP)) != 0 && !link_info.relocatable)
+      || ((s->flags & (SEC_EXCLUDE | SEC_DEBUGGING))
+	  == (SEC_EXCLUDE | SEC_DEBUGGING)))
     {
       if (s->output_section == NULL)
 	s->output_section = bfd_abs_section_ptr;
